--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -456,6 +456,7 @@
     "copy-test-files": "copyfiles -u 1 test/**/*.ps1 test/**/*.sh out/test/",
     "compile": "tsc -p ./ && npm run copy-files",
     "build": "rimraf out && npm run compile",
+    "build-failpoint": "rimraf out && npx ttsc -p ./",
     "watch": "webpack --watch --devtool nosources-source-map --info-verbosity verbose --config ./webpack.config.js",
     "package": "rimraf out && webpack --mode production --config ./webpack.config.js",
     "test-compile": "tsc -p ./",
@@ -533,6 +534,7 @@
     "tmp": "^0.2.1",
     "ts-loader": "^8.0.3",
     "ts-node": "^9.0.0",
+    "ttypescript": "^1.5.12",
     "typescript": "^4.2.4",
     "url-loader": "^4.1.1",
     "uuid": "^8.3.2",
