--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
+          repository: ${{github.event.pull_request.head.repo.full_name}}
 
       - name: Setup node
         uses: actions/setup-node@v2.1.2
@@ -68,6 +69,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.base_ref }}
+          repository: ${{github.event.pull_request.head.repo.full_name}}
 
       - name: Setup node
         uses: actions/setup-node@v2.1.2
