--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -64,6 +64,7 @@
     "klaw": "^3.0.0",
     "md5": "^2.3.0",
     "mime": "^2.5.2",
+    "mocked-env": "^1.3.5",
     "mustache": "^4.2.0",
     "node-forge": "^0.10.0",
     "node-ts-uuid": "^1.0.8",
