test: reorganize extension test structure

--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -23,7 +23,7 @@
       "request": "launch",
       "args": [
         "--extensionDevelopmentPath=${workspaceFolder}",
-        "--extensionTestsPath=${workspaceFolder}/out/test/index.unit"
+        "--extensionTestsPath=${workspaceFolder}/out/test/unit/index"
       ],
       "outFiles": ["${workspaceFolder}/out/test/**/*.js"],
       "preLaunchTask": "npm: test-watch"
@@ -34,7 +34,7 @@
       "request": "launch",
       "args": [
         "--extensionDevelopmentPath=${workspaceFolder}",
-        "--extensionTestsPath=${workspaceFolder}/out/test/suite/envChecker/index"
+        "--extensionTestsPath=${workspaceFolder}/out/test/integration/envChecker/index"
       ],
       "outFiles": ["${workspaceFolder}/out/src/**/*.js", "${workspaceFolder}/out/test/**/*.js"],
       "preLaunchTask": "npm: test-watch",
