--- a/packages/vscode-extension/coverconfig.json
+++ b/packages/vscode-extension/coverconfig.json
@@ -1,7 +1,7 @@
 {
   "enabled": true,
-  "relativeSourcePath": "../src",
-  "relativeCoverageDir": "../../coverage",
+  "relativeSourcePath": "../../src",
+  "relativeCoverageDir": "../../../coverage",
   "ignorePatterns": ["**/node_modules/**"],
   "includePid": false,
   "reports": ["text", "html", "json-summary", "cobertura"],
