--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -66,6 +66,7 @@
     "@microsoft/microsoft-graph-client": "^2.2.1",
     "@microsoft/teams-js": "^1.9.0",
     "axios": "^0.21.1",
+    "botbuilder": ">=4.9.3 <5.0.0",
     "botbuilder-core": ">=4.9.3 <5.0.0",
     "botbuilder-dialogs": ">=4.9.3 < 5.0.0",
     "jwt-decode": "^3.1.2",
