--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -125,6 +125,7 @@
     "mocha": "^8.2.1",
     "mocha-junit-reporter": "^2.0.0",
     "mock-fs": "^4.13.0",
+    "mocked-env": "^1.3.5",
     "nyc": "^15.1.0",
     "sinon": "^9.2.2",
     "source-map-support": "^0.5.19",
