test: exclude depsChecker in test coverage

--- a/packages/cli/.nycrc
+++ b/packages/cli/.nycrc
@@ -5,6 +5,9 @@
     "src/**/*.ts",
     "src/**/*.js"
   ],
+  "exclude": [
+    "src/cmds/preview/depsChecker/**/*"
+  ],
   "reporter": [
     "text",
     "html",
