test: enable vsc extension ut on ci

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -51,7 +51,7 @@ jobs:
         id: unit-test
         shell: bash
         run: |
-          npx lerna run test:unit
+          xvfb-run -a npx lerna run test:unit
           coverages="{}"
           for i in $(find . -name coverage-summary.json); do
             coverages=$(echo $coverages | jq -rc --arg package $(basename $(dirname $(dirname $i))) --argjson total $(jq -cr '.total' $i) '.[$package]= $total')
@@ -99,7 +99,7 @@ jobs:
         id: unit-test
         shell: bash
         run: |
-          npx lerna run test:unit
+          xvfb-run -a npx lerna run test:unit
           coverages="{}"
           for i in $(find . -name coverage-summary.json); do
             coverages=$(echo $coverages | jq -rc --arg package $(basename $(dirname $(dirname $i))) --argjson total $(jq -cr '.total' $i) '.[$package]= $total')
