--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -198,14 +198,14 @@ jobs:
         run: rm -rf ./*.zip && git clean -df
       
       - name: Zip dotnet
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid != 'alpha'}}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid != 'alpha' && contains(steps.version-change.outputs.CHANGED, 'simpleauth@') }}
         uses: papeloto/action-zip@v1
         with:
           files: ./packages/simpleauth/src/TeamsFxSimpleAuth/bin/Release/netcoreapp3.1
           dest: ./packages/fx-core/templates/plugins/resource/simpleauth/SimpleAuth.zip
       
       - name: Release SimpleAuth to GitHub
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid != 'alpha'}}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid != 'alpha' && contains(steps.version-change.outputs.CHANGED, 'simpleauth@') }}
         uses: ncipollo/release-action@v1.7.3
         with:
           artifacts: ./packages/fx-core/templates/plugins/resource/simpleauth/SimpleAuth.zip
