test: add extension handlers.activate() test case

--- a/packages/vscode-extension/coverconfig.json
+++ b/packages/vscode-extension/coverconfig.json
@@ -2,7 +2,7 @@
   "enabled": true,
   "relativeSourcePath": "../../src",
   "relativeCoverageDir": "../../../coverage",
-  "ignorePatterns": ["**/node_modules/**", "debug/depsChecker/**/*", "controls/**/*.scss"],
+  "ignorePatterns": ["**/node_modules/**", "debug/depsChecker/**/*"],
   "includePid": false,
   "reports": ["text", "html", "json-summary", "cobertura"],
   "verbose": false
