test(cli-preview): add unit test
- add unit test for service log writer
- exclude preview.ts from unit test coverage

--- a/packages/cli/.nycrc
+++ b/packages/cli/.nycrc
@@ -6,7 +6,8 @@
     "src/**/*.js"
   ],
   "exclude": [
-    "src/cmds/preview/depsChecker/**/*"
+    "src/cmds/preview/depsChecker/**/*",
+    "src/cmds/preview/preview.ts"
   ],
   "reporter": [
     "text",
