--- a/packages/vscode-extension/tsconfig.json
+++ b/packages/vscode-extension/tsconfig.json
@@ -9,8 +9,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true /* enable all strict type-checking options */,
-    "jsx": "react",
-    "plugins": [{ "transform": "../failpoint-ts/transformer/transformer.ts" }]
+    "jsx": "react"
     /* Additional Checks */
     // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
     // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
