chore: ignore failpoint-ts's build output

--- a/.gitignore
+++ b/.gitignore
@@ -349,6 +349,7 @@ MigrationBackup/
 packages/api/build/
 packages/fx-core/build/
 packages/vscode-extension/out/
+packages/failpoint-ts/build/
 
 ## tmp files
 .nyc_output
