--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-core",
-  "version": "0.4.0",
+  "version": "0.4.1-rc.0",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "license": "MIT",
