chore: remove depschecker coverage in function

--- a/packages/fx-core/.nycrc
+++ b/packages/fx-core/.nycrc
@@ -5,6 +5,9 @@
     "src/**/*.ts",
     "src/**/*.js"
   ],
+  "exclude": [
+      "src/plugins/resource/function/utils/depsChecker/**/*"
+  ],
   "reporter": [
     "text",
     "html",
