--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-cli",
-  "version": "0.3.1-rc.1",
+  "version": "0.3.1",
   "author": "Microsoft Corporation",
   "description": "",
   "license": "MIT",
@@ -99,7 +99,7 @@
     "@azure/identity": "^1.3.0",
     "@azure/ms-rest-nodeauth": "^3.0.6",
     "@microsoft/teamsfx-api": "^0.4.0",
-    "@microsoft/teamsfx-core": "^0.4.1-rc.0",
+    "@microsoft/teamsfx-core": "^0.4.1",
     "adm-zip": "^0.5.5",
     "applicationinsights": "^1.8.10",
     "async-mutex": "^0.3.1",
