perf(arm support): add aad-app resource plugin generate arm templates (#1749)
* perf(arm support): add aad-app resource plugin generate arm templates

* fix(arm support): add generic resource plugin id constant string

* fix(arm support): add jugdement logic to check selected plugins

* fix(arm-support): fix application id uri when only bot

* style(arm support): update client id and secret name

* fix(arm support): add aad end telemetry

--- a/.gitignore
+++ b/.gitignore
@@ -347,6 +347,7 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 packages/api/build/
+packages/failpoint-ts/build/
 packages/fx-core/build/
 packages/vscode-extension/out/
 packages/failpoint-ts/build/
